# data-visualization-course

./: pyproject.toml  script.py
notebooks/: modulo1_matplotlib.ipynb
notebooks/modulo 1/: matplotlib.ipynb
notebooks/modulo 2/: seaborn.ipynb
notebooks/módulo 1/: matplotlib.ipynb
notebooks/módulo 2/: seaborn.ipynb
notebooks/módulo 3/: plotly.ipynb
notebooks/módulo 4/: 01_widgets_filtros.py  02_layout_sidebar.py  03_cache_rendimiento.py  streamlit.ipynb
notebooks/módulo 5/: best_practices.ipynb
